# python-actions-automation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ai-autolabel.yml  autoformat.yml  docformatter.yml  format-unified.yml  gemini.yml  line-review.yml  links.yml  lint.yml  pr-summary.yml  prettier.yml  release.yml  spellcheck.yml  tests.yml
scripts/: format_markdown_code_blocks.py  gemini_labels.py  gemini_pr_summary.py  gemini_review.py  gemini_tool.py  update_headers.py
src/python_actions_automation/: __init__.py  ai_cli.py  mathutils.py
src/python_actions_automation/ai/: __init__.py  core.py
tests/: test_ai_module.py  test_mathutils.py
