[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-actions-automation-demo"
version = "0.1.0"
description = "Projeto demonstrativo para automações Python com GitHub Actions"
authors = [ { name = "Seu Nome", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.scripts]
gemini-tool = "python_actions_automation.ai_cli:main"

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "coverage[toml]>=7.4.0",
  "docformatter>=1.7.5"
  "build>=1.2.1",
  "twine>=5.0.0"
]
ai = [
  "google-generativeai==0.8.3",
  "requests>=2.31.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["python_actions_automation*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]
exclude = [
  ".git",
  "build",
  "dist",
  "*.egg-info"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.codespell]
ignore-words-list = "crate,ser"
skip = ".git,.mypy_cache,.ruff_cache,build,dist"
